--- a/server1/vercel.json
+++ b/server1/vercel.json
@@ -1,14 +1,10 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "./index.json",
-        "use": "@vercel/node"
-      }
+      { "src": "api/**/*.js", "use": "@vercel/node" }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }]
-}
+      { "src": "/api/(.*)", "dest": "/api/index.js" }
+    ]
+  }
+  
